--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi there ,this is Rachit,I am 20 years old and  from Baran Rajasthan, currently persuing B.Tech from NITW in CSE. I like development , I an  full stack Web Developer  with django. I love to explore new Tech feilds and reading books , playing outdoor game and listining music are my hobbies.</p>
+       <p>  Hi there, this is Rachit, I am 20 years old and from Baran Rajasthan, currently pursuing B.Tech from NITW in CSE. I like development, I am a full-stack Web Developer with Django as a back-end framework. I love to explore new Tech fields and reading books, playing an outdoor game and listening to music are my hobbies.
+          </p>
         </div>
 
         <div class="row">
