--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h3 style="margin-top:5%;">Software Developer &amp; Web Developer.</h3>
 
             <p class="font-italic">
-              Currently persuing Btech in CSE from NITW , trying hands on CP .
+             Currently pursuing Btech in CSE from NITW, trying hands-on CP.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -261,7 +261,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Rachit Bathla</h4>
-              <p><em>Innovative and deadline-driven Full-Stack Web-Developer and Software programmer with 1+ years of experience of development and design of Innovative and cool  material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Innovative and deadline-driven Full-Stack Web-Developer and Software programmer with 1+ years of experience of the development and design of Innovative and cool material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Baran,Rajasthan, India</li>
                 <li>(123) 456-7891</li>
@@ -274,13 +274,13 @@
               <h4>B.Tech in Computer Science &amp; Technology</h4>
               <h5>2019 - Present</h5>
               <p><em>National Institute of Technology, Warangal</em></p>
-              <p>Currently persuing second year in CSE with current cgpa of 9.16 upto third semester</p>
+              <p>Currently pursuing the second year in CSE with a current GPA of 9.16 up to the third semester</p>
             </div>
             <div class="resume-item">
               <h4>High Schooling</h4>
               <h5>2017 - 2019</h5>
               <p><em>Vidya Mandir Senior Secondary School,Kota</em></p>
-              <p>Completed my 11-12th grade from Vidya Mandir School ,Kota. Scored 93.2% in 12th CBSC board</p>
+              <p>Completed my 11-12th grade from Vidya Mandir School, Kota. Scored 93.2% in 12th CBSC board</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -291,10 +291,10 @@
               <!-- <h5>2019 - Present</h5> -->
               <!-- <p><em>Experion, New York, NY </em></p> -->
               <ul>
-                <li>Socio:A Social Media Website , where user chat can be converted to many language ,also user post,add friends ,search,profile. Deployed at www.rachit.tk </li>
-                <li>Emart : Mini e-commerce website where seller can list their products with Complete discription and add  category,trace orders , and buyers can place their order , and other features like mail confirmation and automated emails. Deployed at www.bathlarachit.pythonanywhere.com</li>
-                <li>Udentica : follow along project Website that identify image uploaded by user with help prebuild data set in Resnet50 in keras.</li>
-                <li>Vaccination Database with SQL : Team projects complete data base which can hold information about vaccination records country with info like suppliers , export , personal details , vaccine availabe , vaccination records , health care workers , hospital etc. Check github.com/bathlarachit to view.</li>
+                <li>Socio: A Social Media Website, where user chat can be converted to any language, also user post, add friends, search, profile. Deployed at www.rachit.tk . </li>
+                <li>Emart: Mini e-commerce website where seller can list their products with Complete description and add a category, trace orders, and buyers can place their order and other features like mail confirmation and automated emails. Deployed at www.bathlarachit.pythonanywhere.com</li>
+                <li>Udentica: follow along with project Website that identifies image uploaded by user with help prebuild data set in Resnet50 in Keras.</li>
+                <li>Vaccination Database with SQL: Team projects complete database which can hold information about vaccination records country with info like suppliers, export, personal details, vaccine available, vaccination records, health care workers, hospital etc. Check github.com/bathlarachit to view.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -302,8 +302,8 @@
               <h5>2019 - Present</h5>
               <!-- <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
               <ul>
-                <li>Stood 2nd position in  phantom ctf which is team event based on cyber security designed by cybsec club NITW.</li>
-                <li>Codechef rating: 3 star </li>
+                <li>Stood 2nd position in phantom CTF which is a team event based on cybersecurity designed by CYBSEC club NITW.</li>
+                <li>CodeChef rating: 3 star </li>
                 <li>Scored 1704 rank in Jee Main among 10 lakhs candidates.</li>
                 <!-- <li></li> -->
               </ul>
@@ -553,7 +553,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Feel free to get in touch with me . I would love to interact with You.</p>
+          <p>Feel free to get in touch with me. I would love to interact with You.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
