--- a/index.html
+++ b/index.html
@@ -312,6 +312,8 @@
         </div>
 
       </div>
+      <br>
+      <a  href="assets\Rachit's-Main.pdf" download="Rachit_Resume" class="btn btn-outline-info d-flex justify-content-center">Download My Resume</a>
     </section><!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
