--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 09 April 2001</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.rachit.cf</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 7878455927</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong>  Baran, Rajasthan</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Codechef:</strong> bathlarachit</li>
                 </ul>
@@ -116,7 +116,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Btech</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> bathlarachit21@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> bathlarachit21@gmail.com</li>
                     <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> bathlarachit</li>
                       <li><i class="icofont-rounded-right"></i> <strong>Codeforces:</strong> bathlarachit</li>
 
