--- a/index.html
+++ b/index.html
@@ -659,7 +659,9 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/24944355.js"></script>
+<!-- End of HubSpot Embed Code -->d="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/24943307.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 
 </html>
